...
            "state" : "translated",
            "value" : "Módosítás dátuma"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
...
            "state" : "translated",
            "value" : "Írja be a probléma leírását ide"
          }
        }
      }
    },
    "Enter the issue here" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter the issue here"
          }
...
            "state" : "translated",
            "value" : "Példa Probléma"
          }
        }
      }
    },
    "Filter" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
...
            "state" : "translated",
            "value" : "Szűrje ki a problémákat, vagy írja be a # karaktert címkék hozzáadásához"
          }
        }
      }
    },
    "Filters" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filters"
          }
...
            "state" : "translated",
            "value" : "Szűrők"
          }
        }
      }
    },
    "High" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "High"
          }
...
            "state" : "translated",
            "value" : "Magas prioritás"
          }
        }
      }
    },
    "Issues" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Issues"
          }
...
            "state" : "translated",
            "value" : "Problémák"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locked"
          }
...
            "state" : "translated",
            "value" : "Új szám"
          }
        }
      }
    },
    "New Issue" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Issue"
          }
...
            "state" : "translated",
            "value" : "Cimkétlen"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Címke átnevezése"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show awards"
          }
...
